[project]
name = "alarm-utils"
version = "1.0.0"
description = "A simple set of utilities and algorithms for working with alarms."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Caleb Evans", email = "caleb@calebevans.me"}
]
maintainers = [
    {name = "Caleb Evans", email = "caleb@calebevans.me"}
]
license = "MIT"
dependencies = []

[dependency-groups]
dev = [
    "coverage==7.3.1",
    "freezegun==1.2.2",
    "nose2==0.13.0",
    "ruff>=0.12.0",
    "tomli>=2.2.1",
]

[tool.ruff]
include = ["**/*.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # isort
    "I",
    # perflint
    "PERF",
]

# Coverage.py configuration migrated from .coveragerc
[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "pass",
]
include = ["alarmutils/*.py"]
