[project]
name = "alarm-utils"
version = "1.0.0"
description = "A simple set of utilities and algorithms for working with alarms."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Caleb Evans", email = "caleb@calebevans.me"}
]
maintainers = [
    {name = "Caleb Evans", email = "caleb@calebevans.me"}
]
license = "MIT"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.6"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "alarmutils"
module-root = ""

[dependency-groups]
dev = [
    "freezegun==1.2.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.12.0",
    "tomli>=2.2.1",
]

[tool.ruff]
include = ["**/*.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # isort
    "I",
    # perflint
    "PERF",
]

# Coverage.py configuration migrated from .coveragerc
[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "pass",
]
include = ["alarmutils/*.py"]
